cluster/mediaserver/music-library-builder/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: music-library-builder
    app.kubernetes.io/version: 64baadd
  name: music-library-builder
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: music-library-builder
  template:
    metadata:
      labels:
        app.kubernetes.io/name: music-library-builder
        app.kubernetes.io/version: 64baadd
    spec:
      imagePullSecrets:
      - name: forgejo-registry-secret
      automountServiceAccountToken: false
      dnsPolicy: None
      dnsConfig:
        nameservers:
        - 10.43.0.53
        searches:
        - jellyfin.svc.cluster.local
        - svc.cluster.local
        - cluster.local
      containers:
      - image: code.netbird.nathalie-stiefsohn.eu/my-homelab/music-library-builder:64baadd@sha256:edf28fd83432e9bc114721bdfdad8e7ae249cbde6f859c7fb632e8ceff36adeb
        name: music-library-builder
        ports:
        - containerPort: 8140
          name: http
        volumeMounts:
        - mountPath: /media
          name: media-volume
        - mountPath: /state
          name: state-volume
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 2000m
            memory: 1Gi
      volumes:
      - name: media-volume
        persistentVolumeClaim:
          claimName: jellyfin-pvc
      - name: state-volume
        persistentVolumeClaim:
          claimName: music-library-builder-state-pvc
