cluster/mediaserver/music-library-builder/egress-network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: music-library-builder-egress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: music-library-builder
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: jellyfin
      podSelector:
        matchLabels:
          app.kubernetes.io/name: media-dns
    ports:
    - port: 5353
      protocol: UDP
    - port: 5353
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: gluetun-proxy
      podSelector:
        matchLabels:
          app.kubernetes.io/name: gluetun-proxy
    ports:
    - port: 8888
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: gluetun-proxy
      podSelector:
        matchLabels:
          app.kubernetes.io/name: gluetun-proxy
    ports:
    - port: 8001
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ntfy
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ntfy
    ports:
    - port: 8080
      protocol: TCP
